  read and write for write
- #0003294 reported by Bock, patched by aegis regarding a problem with make
  install, that also cleans up the stuff to install a bit, with adding a
  variable to determine what should be copied.
- #0003281 regarding removing masked channels, this will make channels with
  :'s in them not be backwards compatible with 3.2.*, patch by WolfSage
- #0003301 regarding sending @1 ]:Server %s closed the connection
  Devel.WolfSage.org[192.168.2.97] instead of @1 ] :Server
  Devel.WolfSage.org[192.168.2.97] closed the connection. This would
  probably have caused netsplits to go unnoticed.
- #0002095 removing /helpop broadcasting
- #0003298 reported by Stealth patched by WolfSage, regarding KICK now sends
  proper channel name to other servers, Local KICK now displays proper
  channel name from other servers
- Fixed SVSKILL sending an illegal (wrong direction) QUIT right after, #0003307
- Disallowing channels with : in them, it's not worth to risk breakage of 32* to 33*,
  services, and other things like odd-extbans and things we haven't thought about,
  all for allowing one silly character.
- #0003060 reported by Robby22, patched by WolfSage, regarding remote
  rehashing -ssl / -garbage is not Global'd, and a bugfix to an earlier
  WolfSage patch
- #0003092 reported by tabrisnet, patched by WolfSage, regarding documentation says
  link::bind-ip is optional, but not specifying it produces an error
- #0003313 reported by Stealth, regarding not erroring/warning when me::name
  is bigger than HOSTLEN, from now it will error on config read.
- #0002040 reported by aquanight, removing dependancy on +l for +L. This
  will be backwards compatible as well, SJOIN doesn't care (TM) and mode
  doesn't either in case of a server sending it. So this will be just a
  client protocol modification. Also pulled out a modification that got in
  accidentially.
- #0002318 reported by Stealth, regarding small error in oper block
  documentation